--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ header{
   padding-bottom:40px;
 }
 nav{
-  background-color:orange;
+  background-color:black;
   padding-top:40px;
   padding-bottom:40px;
 }
